update description part

--- a/index.html
+++ b/index.html
@@ -8,12 +8,6 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
-    <!-- <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    /> -->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
@@ -30,7 +24,7 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here --> 
-      <div class="description"></div>
+      <div class="description" style="display:none">Appointment added to local ✅</div>
       <br/>
       <div class="time-block row justify-content-round" >
         <div class="hour col-lg-1" data-hour="9am">9am</div>
